--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -618,12 +618,12 @@
     <Content Include="Areas\Business\Css\XXXX\JYPX\JYPXXX_ZXXFDB.css" />
     <Content Include="Areas\Business\Css\XXXX\NLMFY\NLMFYXX_NZW.css" />
     <Content Include="Areas\Business\Css\XXXX\NLMFY\NLMFYXX_DZWZM.css" />
-    <Content Include="Areas\Business\Css\XXXX\NLMFY\NLMFYXX_YLHH - 复制%284%29.css" />
-    <Content Include="Areas\Business\Css\XXXX\NLMFY\NLMFYXX_YLHH - 复制%285%29.css" />
-    <Content Include="Areas\Business\Css\XXXX\NLMFY\NLMFYXX_YLHH - 复制%286%29.css" />
-    <Content Include="Areas\Business\Css\XXXX\NLMFY\NLMFYXX_YLHH - 复制%287%29.css" />
-    <Content Include="Areas\Business\Css\XXXX\NLMFY\NLMFYXX_YLHH - 复制%288%29.css" />
-    <Content Include="Areas\Business\Css\XXXX\NLMFY\NLMFYXX_YLHH - 复制.css" />
+    <Content Include="Areas\Business\Css\XXXX\NLMFY\NLMFYXX_CQYZ.css" />
+    <Content Include="Areas\Business\Css\XXXX\NLMFY\NLMFYXX_SC.css" />
+    <Content Include="Areas\Business\Css\XXXX\NLMFY\NLMFYXX_FLNY.css" />
+    <Content Include="Areas\Business\Css\XXXX\NLMFY\NLMFYXX_SLSY.css" />
+    <Content Include="Areas\Business\Css\XXXX\NLMFY\NLMFYXX_NJJSB.css" />
+    <Content Include="Areas\Business\Css\XXXX\NLMFY\NLMFYXX_NCPJG.css" />
     <Content Include="Areas\Business\Css\XXXX\NLMFY\NLMFYXX_YLHH.css" />
     <Content Include="Areas\Business\Css\XXXX\PFCG\PFCGXX_LP.css" />
     <Content Include="Areas\Business\Css\XXXX\PFCG\PFCGXX_FSXM.css" />
@@ -759,6 +759,15 @@
     <Content Include="Areas\Business\Scripts\Business\CXLB\JYPXCX\JYPXCX_YM.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\JYPXCX\JYPXCX_PBPK.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\JYPXCX\JYPXCX_ZXXFDB.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\NLMFYCX\NLMFYCX_NZW.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\NLMFYCX\NLMFYCX_DZWZM.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\NLMFYCX\NLMFYCX_CQYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\NLMFYCX\NLMFYCX_SC.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\NLMFYCX\NLMFYCX_FLNY.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\NLMFYCX\NLMFYCX_SLSY.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\NLMFYCX\NLMFYCX_NJJSB.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\NLMFYCX\NLMFYCX_NCPJG.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\NLMFYCX\NLMFYCX_YLHH.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\PFCGCX\PFCGCX_LP.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\PFCGCX\PFCGCX_FSXM.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\PFCGCX\PFCGCX_XBSP.js" />
@@ -1300,6 +1309,15 @@
     <Content Include="Areas\Business\Scripts\Business\XXXX\JYPXXX\JYPXXX_YM.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\JYPXXX\JYPXXX_PBPK.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\JYPXXX\JYPXXX_ZXXFDB.js" />
+    <Content Include="Areas\Business\Scripts\Business\XXXX\NLMFYXX\NLMFYXX_NZW.js" />
+    <Content Include="Areas\Business\Scripts\Business\XXXX\NLMFYXX\NLMFYXX_DZWZM.js" />
+    <Content Include="Areas\Business\Scripts\Business\XXXX\NLMFYXX\NLMFYXX_CQYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\XXXX\NLMFYXX\NLMFYXX_SC.js" />
+    <Content Include="Areas\Business\Scripts\Business\XXXX\NLMFYXX\NLMFYXX_FLNY.js" />
+    <Content Include="Areas\Business\Scripts\Business\XXXX\NLMFYXX\NLMFYXX_SLSY.js" />
+    <Content Include="Areas\Business\Scripts\Business\XXXX\NLMFYXX\NLMFYXX_NJJSB.js" />
+    <Content Include="Areas\Business\Scripts\Business\XXXX\NLMFYXX\NLMFYXX_NCPJG.js" />
+    <Content Include="Areas\Business\Scripts\Business\XXXX\NLMFYXX\NLMFYXX_YLHH.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\QZZPXX\QZZPXX_JZZP.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\QZZPXX\QZZPXX_QZZP.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\ZSJMXX\ZSJMXX_WLFW.js" />
@@ -2181,6 +2199,14 @@
     <Content Include="Areas\Business\Views\NLMFYCX\NLMFYCX_FLNY.cshtml" />
     <Content Include="Areas\Business\Views\NLMFYCX\NLMFYCX_SLSY.cshtml" />
     <Content Include="Areas\Business\Views\NLMFYCX\NLMFYCX_NJJSB.cshtml" />
+    <Content Include="Areas\Business\Views\NLMFYXX\NLMFYXX_NCPJG.cshtml" />
+    <Content Include="Areas\Business\Views\NLMFYXX\NLMFYXX_NZW.cshtml" />
+    <Content Include="Areas\Business\Views\NLMFYXX\NLMFYXX_DZWZM.cshtml" />
+    <Content Include="Areas\Business\Views\NLMFYXX\NLMFYXX_CQYZ.cshtml" />
+    <Content Include="Areas\Business\Views\NLMFYXX\NLMFYXX_SC.cshtml" />
+    <Content Include="Areas\Business\Views\NLMFYXX\NLMFYXX_FLNY.cshtml" />
+    <Content Include="Areas\Business\Views\NLMFYXX\NLMFYXX_SLSY.cshtml" />
+    <Content Include="Areas\Business\Views\NLMFYXX\NLMFYXX_NJJSB.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
