--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -819,6 +819,32 @@
     <Content Include="Areas\Business\Scripts\Business\CXLB\PFCGCX\PFCGCX_SP.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\QZZPCX\QZZPCX_JZZP.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\QZZPCX\QZZPCX_QZZP.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\SWFWCX\SWFWCX_SBZL.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\SWFWCX\SWFWCX_FLZX.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\SWFWCX\SWFWCX_CWKJPG.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\SWFWCX\SWFWCX_BX.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\SWFWCX\SWFWCX_TZDB.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\SWFWCX\SWFWCX_YSBZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\SWFWCX\SWFWCX_PHZP.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\SWFWCX\SWFWCX_SJCH.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\SWFWCX\SWFWCX_GGCM.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\SWFWCX\SWFWCX_ZHFW.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\SWFWCX\SWFWCX_LPDZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\SWFWCX\SWFWCX_ZK.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\SWFWCX\SWFWCX_FYSJ.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\SWFWCX\SWFWCX_WLBXWH.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\SWFWCX\SWFWCX_WZJSTG.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\SWFWCX\SWFWCX_ZXFW.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\SWFWCX\SWFWCX_KD.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\SWFWCX\SWFWCX_HYWL.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\SWFWCX\SWFWCX_HYZX.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\SWFWCX\SWFWCX_BGSBWX.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\SWFWCX\SWFWCX_ZL.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\SWFWCX\SWFWCX_DBQZQZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\SWFWCX\SWFWCX_JZWX.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\SWFWCX\SWFWCX_JXSBWX.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\SWFWCX\SWFWCX_SYSX.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\SWFWCX\SWFWCX_LYQD.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\SWFWCX\SWFWCX_GSZC.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\ZSJMCX\ZSJMCX_NY.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\ZSJMCX\ZSJMCX_TS.js" />
