--- a/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
+++ b/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
@@ -66,6 +66,7 @@
     <Compile Include="BLL\CXLB\PFCGCXBLL.cs" />
     <Compile Include="BLL\CXLB\JYPXCXBLL.cs" />
     <Compile Include="BLL\CXLB\NLMFYCXBLL.cs" />
+    <Compile Include="BLL\CXLB\ZXJCCXBLL.cs" />
     <Compile Include="BLL\CXLB\SWFWCXBLL.cs" />
     <Compile Include="BLL\CXLB\ZSJMCXBLL.cs" />
     <Compile Include="BLL\CXLB\QZZPCXBLL.cs" />
