--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -52,6 +52,7 @@
     <Compile Include="CXLB\IHQSYCXBLL.cs" />
     <Compile Include="CXLB\ILRCXBLL.cs" />
     <Compile Include="CXLB\ILYJDCXBLL.cs" />
+    <Compile Include="CXLB\IXXYLCXBLL.cs" />
     <Compile Include="CXLB\IZXJCCXBLL.cs" />
     <Compile Include="CXLB\ISWFWCXBLL.cs" />
     <Compile Include="CXLB\IZSJMCXBLL.cs" />
