--- a/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
+++ b/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
@@ -69,6 +69,7 @@
     <Compile Include="BLL\CXLB\NLMFYCXBLL.cs" />
     <Compile Include="BLL\CXLB\HQSYCXBLL.cs" />
     <Compile Include="BLL\CXLB\LYJDCXBLL.cs" />
+    <Compile Include="BLL\CXLB\XXYLCXBLL.cs" />
     <Compile Include="BLL\CXLB\ZXJCCXBLL.cs" />
     <Compile Include="BLL\CXLB\SWFWCXBLL.cs" />
     <Compile Include="BLL\CXLB\ZSJMCXBLL.cs" />
