--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -469,14 +469,14 @@
     <Content Include="Areas\Business\Css\HTFB\QZZP\QZZP_JZZP.css" />
     <Content Include="Areas\Business\Css\HTFB\QZZP\QZZP_QZZP.css" />
     <Content Include="Areas\Business\Css\HTGL\WDZH\RZGL.css" />
-    <Content Include="Areas\Business\Css\HTFB\SHFW\SHFW_DJSJWP.css" />
-    <Content Include="Areas\Business\Css\HTFB\SHFW\SHFW_GHSPNJYC.css" />
-    <Content Include="Areas\Business\Css\HTFB\SHFW\SHFW_JX.css" />
-    <Content Include="Areas\Business\Css\HTFB\SHFW\SHFW_QCGZFH.css" />
-    <Content Include="Areas\Business\Css\HTFB\SHFW\SHFW_QCMRZS.css" />
-    <Content Include="Areas\Business\Css\HTFB\SHFW\SHFW_QCPL.css" />
-    <Content Include="Areas\Business\Css\HTFB\SHFW\SHFW_QCWXBY.css" />
-    <Content Include="Areas\Business\Css\HTFB\SHFW\SHFW_ZC.css" />
+    <Content Include="Areas\Business\Css\HTFB\CL\CL_DJSJWP.css" />
+    <Content Include="Areas\Business\Css\HTFB\CL\CL_GHSPNJYC.css" />
+    <Content Include="Areas\Business\Css\HTFB\CL\CL_JX.css" />
+    <Content Include="Areas\Business\Css\HTFB\CL\CL_QCGZFH.css" />
+    <Content Include="Areas\Business\Css\HTFB\CL\CL_QCMRZS.css" />
+    <Content Include="Areas\Business\Css\HTFB\CL\CL_QCPL.css" />
+    <Content Include="Areas\Business\Css\HTFB\CL\CL_QCWXBY.css" />
+    <Content Include="Areas\Business\Css\HTFB\CL\CL_ZC.css" />
     <Content Include="Areas\Business\Css\HTFB\SHFW\SHFW_BJ.css" />
     <Content Include="Areas\Business\Css\HTFB\SHFW\SHFW_BJQX.css" />
     <Content Include="Areas\Business\Css\HTFB\SHFW\SHFW_BMYS.css" />
@@ -1246,22 +1246,22 @@
     <Content Include="Areas\Business\Scripts\Business\HTFB\QZZP\QZZP_QZZP.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\QZZP\QZZP_QZZPYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\HTGL\WDZH\RZGL.js" />
-    <Content Include="Areas\Business\Scripts\Business\HTFB\SHFW\SHFW_DJSJWP.js" />
-    <Content Include="Areas\Business\Scripts\Business\HTFB\SHFW\SHFW_DJSJWPYZ.js" />
-    <Content Include="Areas\Business\Scripts\Business\HTFB\SHFW\SHFW_GHSPNJYC.js" />
-    <Content Include="Areas\Business\Scripts\Business\HTFB\SHFW\SHFW_GHSPNJYCYZ.js" />
-    <Content Include="Areas\Business\Scripts\Business\HTFB\SHFW\SHFW_JX.js" />
-    <Content Include="Areas\Business\Scripts\Business\HTFB\SHFW\SHFW_JXYZ.js" />
-    <Content Include="Areas\Business\Scripts\Business\HTFB\SHFW\SHFW_QCGZFH.js" />
-    <Content Include="Areas\Business\Scripts\Business\HTFB\SHFW\SHFW_QCGZFHYZ.js" />
-    <Content Include="Areas\Business\Scripts\Business\HTFB\SHFW\SHFW_QCMRZS.js" />
-    <Content Include="Areas\Business\Scripts\Business\HTFB\SHFW\SHFW_QCMRZSYZ.js" />
-    <Content Include="Areas\Business\Scripts\Business\HTFB\SHFW\SHFW_QCPL.js" />
-    <Content Include="Areas\Business\Scripts\Business\HTFB\SHFW\SHFW_QCPLYZ.js" />
-    <Content Include="Areas\Business\Scripts\Business\HTFB\SHFW\SHFW_QCWXBY.js" />
-    <Content Include="Areas\Business\Scripts\Business\HTFB\SHFW\SHFW_QCWXBYYZ.js" />
-    <Content Include="Areas\Business\Scripts\Business\HTFB\SHFW\SHFW_ZC.js" />
-    <Content Include="Areas\Business\Scripts\Business\HTFB\SHFW\SHFW_ZCYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTFB\CL\CL_DJSJWP.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTFB\CL\CL_DJSJWPYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTFB\CL\CL_GHSPNJYC.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTFB\CL\CL_GHSPNJYCYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTFB\CL\CL_JX.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTFB\CL\CL_JXYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTFB\CL\CL_QCGZFH.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTFB\CL\CL_QCGZFHYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTFB\CL\CL_QCMRZS.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTFB\CL\CL_QCMRZSYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTFB\CL\CL_QCPL.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTFB\CL\CL_QCPLYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTFB\CL\CL_QCWXBY.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTFB\CL\CL_QCWXBYYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTFB\CL\CL_ZC.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTFB\CL\CL_ZCYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\SHFW\SHFW_BJ.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\SHFW\SHFW_BJQX.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\SHFW\SHFW_BJQXYZ.js" />
@@ -2178,14 +2178,14 @@
     <Content Include="Areas\Business\Views\SHFW\SHFW_JJWX.cshtml" />
     <Content Include="Areas\Business\Views\SHFW\SHFW_SJWX.cshtml" />
     <Content Include="Areas\Business\Views\SWFW\SWFW_QMFSSM.cshtml" />
-    <Content Include="Areas\Business\Views\SHFW\SHFW_ZC.cshtml" />
-    <Content Include="Areas\Business\Views\SHFW\SHFW_DJSJWP.cshtml" />
-    <Content Include="Areas\Business\Views\SHFW\SHFW_JX.cshtml" />
-    <Content Include="Areas\Business\Views\SHFW\SHFW_QCPL.cshtml" />
-    <Content Include="Areas\Business\Views\SHFW\SHFW_QCWXBY.cshtml" />
-    <Content Include="Areas\Business\Views\SHFW\SHFW_GHSPNJYC.cshtml" />
-    <Content Include="Areas\Business\Views\SHFW\SHFW_QCMRZS.cshtml" />
-    <Content Include="Areas\Business\Views\SHFW\SHFW_QCGZFH.cshtml" />
+    <Content Include="Areas\Business\Views\CL\CL_ZC.cshtml" />
+    <Content Include="Areas\Business\Views\CL\CL_DJSJWP.cshtml" />
+    <Content Include="Areas\Business\Views\CL\CL_JX.cshtml" />
+    <Content Include="Areas\Business\Views\CL\CL_QCPL.cshtml" />
+    <Content Include="Areas\Business\Views\CL\CL_QCWXBY.cshtml" />
+    <Content Include="Areas\Business\Views\CL\CL_GHSPNJYC.cshtml" />
+    <Content Include="Areas\Business\Views\CL\CL_QCMRZS.cshtml" />
+    <Content Include="Areas\Business\Views\CL\CL_QCGZFH.cshtml" />
     <Content Include="Areas\Business\Views\SWFW\SWFW_GSZC.cshtml" />
     <Content Include="Areas\Business\Views\SWFW\SWFW_SBZL.cshtml" />
     <Content Include="Areas\Business\Views\SWFW\SWFW_FLZX.cshtml" />
