--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -116,7 +116,10 @@
     <Compile Include="Maps\ES\ES_WHYL_WTHWYQJBXX_Map.cs" />
     <Compile Include="Maps\ES\ES_WHYL_WYXNWPJBXX_Map.cs" />
     <Compile Include="Maps\ES\ES_WHYL_YSPSCPJBXX_Map.cs" />
-    <Compile Include="Maps\FC\FC_CFCKTDCWJBXX_Map.cs" />
+    <Compile Include="Maps\FC\FC_CKJBXX_Map.cs" />
+    <Compile Include="Maps\FC\FC_CWJBXX_Map.cs" />
+    <Compile Include="Maps\FC\FC_TDJBXX_Map.cs" />
+    <Compile Include="Maps\FC\FC_CFJBXX_Map.cs" />
     <Compile Include="Maps\FC\FC_DZFJBXX_Map.cs" />
     <Compile Include="Maps\FC\FC_SPJBXX_Map.cs" />
     <Compile Include="Maps\FC\FC_XZLJBXX_Map.cs" />
@@ -359,7 +362,10 @@
     <Compile Include="Models\ES\ES_WHYL_WTHWYQJBXX.cs" />
     <Compile Include="Models\ES\ES_WHYL_WYXNWPJBXX.cs" />
     <Compile Include="Models\ES\ES_WHYL_YSPSCPJBXX.cs" />
-    <Compile Include="Models\FC\FC_CFCKTDCWJBXX.cs" />
+    <Compile Include="Models\FC\FC_CWJBXX.cs" />
+    <Compile Include="Models\FC\FC_TDJBXX.cs" />
+    <Compile Include="Models\FC\FC_CKJBXX.cs" />
+    <Compile Include="Models\FC\FC_CFJBXX.cs" />
     <Compile Include="Models\FC\FC_DZFJBXX.cs" />
     <Compile Include="Models\FC\FC_ESFJBXX.cs" />
     <Compile Include="Models\FC\FC_SPJBXX.cs" />
