--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Maps\CL\CL_SLCJBXX_Map.cs" />
     <Compile Include="Maps\CL\CL_ZXCJBXX_Map.cs" />
     <Compile Include="Maps\CODES\CODES_CL_JC_Map.cs" />
+    <Compile Include="Maps\CODES\CODES_DISTRICT_Map.cs" />
     <Compile Include="Maps\CODES\CODES_CL_Map.cs" />
     <Compile Include="Maps\CODES\CODES_CW_Map.cs" />
     <Compile Include="Maps\CODES\CODES_CY_Map.cs" />
@@ -96,7 +97,6 @@
     <Compile Include="Maps\CY\CY_KCTSJBXX_Map.cs" />
     <Compile Include="Maps\CY\CY_MSJBXX_Map.cs" />
     <Compile Include="Maps\CY\CY_WMJBXX_Map.cs" />
-    <Compile Include="Maps\DISTRICT_Map.cs" />
     <Compile Include="Maps\DJJDJL_Map.cs" />
     <Compile Include="Maps\ES\ES_JDJJBG_BGSBJBXX_Map.cs" />
     <Compile Include="Maps\ES\ES_JDJJBG_ESJDJBXX_Map.cs" />
@@ -306,6 +306,7 @@
     <Compile Include="Models\CL\CL_MTCJBXX.cs" />
     <Compile Include="Models\CL\CL_DDCJBXX.cs" />
     <Compile Include="Models\CL\CL_SLCJBXX.cs" />
+    <Compile Include="Models\CODES\CODES_DISTRICT.cs" />
     <Compile Include="Models\CODES\CODES_CL_JC.cs" />
     <Compile Include="Models\CODES\CODES_CW.cs" />
     <Compile Include="Models\CODES\CODES_CY.cs" />
@@ -340,7 +341,6 @@
     <Compile Include="Models\CY\CY_KCTSJBXX.cs" />
     <Compile Include="Models\CY\CY_MSJBXX.cs" />
     <Compile Include="Models\CY\CY_WMJBXX.cs" />
-    <Compile Include="Models\DISTRICT.cs" />
     <Compile Include="Models\DJJDJL.cs" />
     <Compile Include="Models\EncryptionHelper.cs" />
     <Compile Include="Models\CL\CL_ZXCJBXX.cs" />
