--- a/网络爬虫_获取全国城市到区域地段/WLPC/WLPC.csproj
+++ b/网络爬虫_获取全国城市到区域地段/WLPC/WLPC.csproj
@@ -68,7 +68,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Ashx\GetXZQXX.ashx" />
+    <Content Include="Ashx\GetCSXX.ashx" />
     <Content Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -83,8 +83,8 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Ashx\GetXZQXX.ashx.cs">
-      <DependentUpon>GetXZQXX.ashx</DependentUpon>
+    <Compile Include="Ashx\GetCSXX.ashx.cs">
+      <DependentUpon>GetCSXX.ashx</DependentUpon>
     </Compile>
     <Compile Include="Index.aspx.cs">
       <DependentUpon>Index.aspx</DependentUpon>
